MDEV-7988: moving beyond 255 bytes for binary/char